--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,7 @@ name: Deploy Node Application
 on: 
   push:
     branches:
-      - mern-ec2-docker
+      - master
 
 jobs:
   build:
@@ -14,17 +14,17 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}     
       - name: Build Docker Image
-        run: docker build -t integrationninjas/nodejs-app  .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-app  .
       - name: Publish Image to docker hub
-        run: docker push integrationninjas/nodejs-app:latest 
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest 
  
   deploy:
     needs: build
     runs-on: self-hosted 
     steps:
       - name: Pull image from docker hub
-        run: docker pull integrationninjas/nodejs-app:latest 
+        run: docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest 
       - name: Delete old container
         run: docker rm -f nodejs-app-container  
       - name: Run Docker Container
-        run: docker run -d -p 4000:4000 --name nodejs-app-container -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' integrationninjas/nodejs-app
+        run: docker run -d -p 5000:5000 --name nodejs-app-container -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' ${{ secrets.DOCKER_USERNAME }}/nodejs-app
